--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,6 +3,7 @@ Type: Package
 Title: Efficient GEO Data Management Using Monet
 Version: 0.1.0
 Author: XYBio [aut, cre]
+Maintainer: XYBio
 Description: Monet is an R package designed for efficient management and analysis of GEO data. It provides a streamlined workflow and custom object structures to simplify GEO data integration and visualization.
 License: GPL-3
 Encoding: UTF-8
