Update class function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(AddGSEData)
 export(AddGSMData)
 export(AddPMCData)
+export(CreateMonetObject)
 export(GetGSEMetadata)
 export(GetGSMMetadata)
 export(GetPMCMetadata)
-export(createMonetObject)
-export(printMonet)
+export(ViewMonet)
