Add parse function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,6 @@ export(CreateMonetObject)
 export(GetGSEMetadata)
 export(GetGSMMetadata)
 export(GetPMCMetadata)
+export(ParseGSEMetadata)
+export(ParseGSMMeta)
 export(ViewMonet)
