--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,6 @@ export(CreateMonetObject)
 export(GetGSEMetadata)
 export(GetGSMMetadata)
 export(GetPMCMetadata)
-export(ParseGSEMetadata)
-export(ParseGSMMeta)
+export(ParseGSESoft)
+export(ParseGSMSoft)
 export(ViewMonet)
